--- a/application/src/index.html
+++ b/application/src/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BS Integral Management</title>
+  <title>BS | Integral Management</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/libs/css/fontawesome.min.css">
-  <link rel="stylesheet" href="./assets/libs/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <app-root></app-root>
+  
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="./assets/libs/js/bootstrap.min.js"></script>
 </body>
 </html>
